--- a/index.html
+++ b/index.html
@@ -205,9 +205,14 @@
       </div>
 
     </section>
+   <div>
+    <h3>hii iam jewelry bot service</h3>
+   </div>
 >
   </div>
-
+<div>
+ <iframe src='https://webchat.botframework.com/embed/jquerybot-bot?s=H3Ni4eH0YC8.2i01RPVQgxCON-snDm09yrg6kf2qk2dveNg3WjSn9Y0'  style='min-width: 800px; width: 100%; min-height: 500px;'></iframe>
+ </div>
 
 
   <div class="item_section layout_padding2">
