--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       aptent taciti sociosqu ad litora torquent per conubia nostra
                     </p>
                     <div>
-                      <a href="">query with us with bot help.</a>
+                      <a href="index.html">BlueStone</a>
                     </div>
                   </div>
                 </div>
@@ -162,7 +162,7 @@
                       aptent taciti sociosqu ad litora torquent per conubia nostra
                     </p>
                     <div>
-                      <a href="">hii iam bot</a>
+                      <a href="index.html">BlueStone</a>
                     </div>
                   </div>
                 </div>
